# TeachBooks-Zoomies

./: README.md  pyproject.toml
,github/workflows/: python-publish.yml
src/teachbooks_zoomies/: __init__.py  _version.py
src/teachbooks_zoomies/static/: viewer_custom.css  viewer_custom.js
