[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teachbooks-zoomies"
dynamic=["version"]
authors = [{ name = "Fabio Bonassi", email = "fabio.bonassi@polimi.it" }]
description = "A Sphinx extension to integrate Viewer.js for image zooming into Sphinx documentation (designed for JupyterBook v1)."
readme = "README.md"
dependencies = [
    "sphinx"
]
requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/teachbooks-zoomies/_version.py"